--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       - "3000:3000"
     volumes:
       - ./frontend:/app
+    networks:
+      - ft_transcendence-network
     working_dir: /app
     depends_on:
       - backend
