--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
   "description": "",
   "dependencies": {
     "@fastify/cors": "^11.0.1",
+    "better-sqlite3": "^11.10.0",
     "fastify": "^5.3.3"
   },
   "devDependencies": {
