--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   frontend:
-    image: node:latest
+    image: node
     container_name: frontend
     command: [ "sh", "-c", "npm install && npm run dev"]
     ports:
@@ -13,7 +13,7 @@ services:
     depends_on:
       - backend
   backend:
-    image: node:latest
+    image: node
     container_name: backend
     ports:
       - "8080:8080"
@@ -22,13 +22,19 @@ services:
       - ft_transcendence-network
     volumes:
       - ./backend:/app
+      - ./database:/root/db
     working_dir: /app
-  # database:
-  #   image: nouchka/sqlite3
-  #   container_name: database
-  #   volumes:
-  #     - ./database:/root/db
-  #   restart: always
+    depends_on:
+      - database
+  database:
+    image: alpine:latest
+    container_name: database
+    command: ["sh", "-c", "apk add --no-cache sqlite && tail -f /dev/null"]
+    networks:
+      - ft_transcendence-network
+    volumes:
+      - ./database:/root/db
+    restart: always
 
 networks:
   ft_transcendence-network:
