--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "fastify": "^5.3.3"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^22.15.21",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
